Fixed color scheme container scroll not showing first and last elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,10 +71,9 @@ body {
         }
             .color-schemes-container {
                 display: flex;
-                justify-content: space-around;
                 gap: 20px;
 
-                padding: 20px 0 20px 0;
+                padding: 20px 20px 20px 20px;
 
                 overflow-x: scroll;
             }
